# Computer-Science-Task-1

./: CMakeLists.txt  README.md  main.c  regex.py
datasets/: populations.txt
datasets/delete/: patients.txt
datasets/static/: patients.txt  vaccines.txt
datasets/static/patients/: 12345678A.txt
src/menu/: Actions.c  Actions.h  Menu.c  Menu.h
src/patient/: Patient.c  Patient.h
src/population/: Population.c  Population.h
src/program/: Program.c  Program.h
src/utils/: Debug.h  Errors.h  Files.c  Files.h  Menu.c  Menu.h  Setup.c  Setup.h  Validators.c  Validators.h
src/vaccine/: Vaccine.c  Vaccine.h
